Key config editor doesn't save/restore map_type "Text Input" #35157

Closed
opened 2013-04-30 06:08:05 +02:00 by Shinsuke Irie · 3 comments
Member

%%%--- Operating System, Graphics card ---

Ubuntu 13.04 amd64

- Blender version with error, and version that worked ---

r56401

- Short description of error ---

In the keymaps of the text editor and the console, a map_type "Text Input" is assign to text.insert and console.insert, respectively. However, key configuration file doesn't include such information so importing it incorrectly sets the map_type "Keyboard" (and the type "Any"). That means we have to modify the settings manually after importing the key configuration.

Steps to reproduce:

  1. Start Blender with --factory-startup
  2. Edit some key assignments in the text editor
  3. Export a key configuration file
  4. Restart Blender with --factory-startup
  5. Import the key configuration file

Then, the map_type of text.insert should be changed to "Keyboard (Any)".
%%%

%%%--- Operating System, Graphics card --- Ubuntu 13.04 amd64 - Blender version with error, and version that worked --- r56401 - Short description of error --- In the keymaps of the text editor and the console, a map_type "Text Input" is assign to text.insert and console.insert, respectively. However, key configuration file doesn't include such information so importing it incorrectly sets the map_type "Keyboard" (and the type "Any"). That means we have to modify the settings manually after importing the key configuration. Steps to reproduce: 1. Start Blender with --factory-startup 2. Edit some key assignments in the text editor 3. Export a key configuration file 4. Restart Blender with --factory-startup 5. Import the key configuration file Then, the map_type of text.insert should be changed to "Keyboard (Any)". %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35157
No description provided.