Fix #35157: export key configuration did not export text input events correctly.